third_party/move/move-compiler-v2/tests/visibility-checker/inline_with_enums_03.exp

Diagnostics:
warning: unpack on `m::Wrapper` can only be done within module `0xc0ffee::m`, but `m::use_me_not` could be called (and expanded) outside
   ┌─ tests/visibility-checker/inline_with_enums_03.move:10:23
   │
10 │     public inline fun use_me_not(): u64 {
   │                       ^^^^^^^^^^
11 │         let x = make(22);
12 │         match (x) {
   │                - unpack here

error: Invalid operation: unpack on `m::Wrapper` can only be done within module `0xc0ffee::m`
   ┌─ tests/visibility-checker/inline_with_enums_03.move:21:9
   │
12 │         match (x) {
   │                - unpack here
   ·
21 │     fun test(): u64 {
   │         ^^^^
22 │         m::use_me_not()
   │         --------------- from a call inlined at this callsite
